--- a/test1.html
+++ b/test1.html
@@ -2,10 +2,13 @@
     <html>
       <head>
 	<meta property="fc:frame" content="vNext" />
-	<meta property="fc:frame:image" content="https://github.com/saluberis/fc-frames-dev/blob/main/test.webp" />
+	<meta property="fc:frame:image" content="https://github.com/saluberis/fc-frames-dev/blob/main/frame.png" />
 	<meta property="fc:frame:button:1" content="Green" />
 	<meta property="fc:frame:button:2" content="Purple" />
 	<meta property="fc:frame:button:3" content="Red" />
 	<meta property="fc:frame:button:4" content="Blue" />
       </head>
+      <body>
+      farcaster static frame test
+      </body>
     </html>
