--- a/test1.html
+++ b/test1.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-    <html>
-      <head>
+<html>
+<head>
+	<meta property="og:title" content="hello">
+    <meta property="og:image" content="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDRldXNhdGcxZDV3azd0ZHVubGRjeGU4OHV2Y2h5d210czlwa2txaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/26tPo9rksWnfPo4HS/giphy.gif">
 	<meta property="fc:frame" content="vNext" />
 	<meta property="fc:frame:image" content="https://saluberis.github.io/fc-frames-dev/frame.png" />
 	<meta property="fc:frame:button:1" content="Green" />
 	<meta property="fc:frame:button:2" content="Purple" />
 	<meta property="fc:frame:button:3" content="Red" />
 	<meta property="fc:frame:button:4" content="Blue" />
-      </head>
-      <body>
+</head>
+<body>
       farcaster static frame test
-      </body>
-    </html>
+</body>
+</html>
