--- a/twist0.html
+++ b/twist0.html
@@ -4,7 +4,7 @@
 	<meta property="og:title" content="Twist #0">
     <meta property="og:image" content="https://saluberis.github.io/fc-frames-dev/webp/0.webp">
     
-    <meta name="fc:frame:post_url" content="https://httpbin.org/redirect-to?url=https%3A%2F%2Fwww.artblocks.io%2Fcollections%2Fpresents%2Fprojects%2F0x99a9b7c1116f9ceeb1652de04d5969cce509b069%2F490&status_code=302"/>
+    <meta name="fc:frame:post_url" content="https://saluberis.github.io/fc-frames-dev/twist1.html"/>
     
 	<meta property="fc:frame" content="vNext" />
 	<meta property="fc:frame:image" content="https://saluberis.github.io/fc-frames-dev/webp/0.webp" />
